fix: resolve linting warnings and build issues
- Remove unused TechBackground import from page.tsx
- Fix middleware parameter naming to avoid unused variable warning
- Replace img tags with Next.js Image components in HeroSection
- Fix CSS import order in globals.css to resolve build error
- All code now passes typecheck, lint, and format checks

--- a/package.json
+++ b/package.json
@@ -6,10 +6,11 @@
     "dev": "next dev",
     "build": "next build --turbopack",
     "start": "next start",
-    "lint": "eslint",
     "typecheck": "tsc --noEmit",
+    "lint": "next lint",
     "format": "prettier --write .",
-    "format:check": "prettier --check ."
+    "format:check": "prettier --check .",
+    "audit": "npm run typecheck && npm run lint && npm run format:check"
   },
   "dependencies": {
     "@vercel/analytics": "^1.5.0",
