--- a/package.json
+++ b/package.json
@@ -3,8 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
-    "build": "next build --turbopack",
+    "dev": "NEXT_NO_TURBOPACK=1 next dev",
+    "dev:turbo": "next dev --turbo",
+    "build": "next build",
     "start": "next start",
     "typecheck": "tsc --noEmit",
     "lint": "next lint",
@@ -13,6 +14,7 @@
     "audit": "npm run typecheck && npm run lint && npm run format:check"
   },
   "dependencies": {
+    "@swc/helpers": "^0.5.2",
     "@vercel/analytics": "^1.5.0",
     "@vercel/speed-insights": "^1.2.0",
     "autoprefixer": "^10.4.21",
@@ -31,5 +33,9 @@
     "eslint-config-next": "15.5.2",
     "prettier": "^3.6.2",
     "typescript": "^5"
+  }
+  ,
+  "engines": {
+    "node": "20.x"
   }
 }
