--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
   },
   "dependencies": {
     "@swc/helpers": "^0.5.2",
-    "@vercel/analytics": "^1.5.0",
-    "@vercel/speed-insights": "^1.2.0",
+    "@vercel/analytics": "1.5.0",
+    "@vercel/speed-insights": "1.2.0",
     "autoprefixer": "^10.4.21",
     "next": "15.5.2",
     "postcss": "^8.5.6",
@@ -33,8 +33,7 @@
     "eslint-config-next": "15.5.2",
     "prettier": "^3.6.2",
     "typescript": "^5"
-  }
-  ,
+  },
   "engines": {
     "node": "20.x"
   }
