--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@vercel/analytics": "1.5.0",
     "@vercel/speed-insights": "1.2.0",
     "autoprefixer": "^10.4.21",
+    "lucide-react": "0.544.0",
     "next": "15.5.2",
     "postcss": "^8.5.6",
     "react": "19.1.0",
