Surgical UX/Performance/SEO Improvements - Experimental Branch
🎯 Complete Surgical Overhaul:

📊 Layout & Metadata (layout.tsx):
- Simplified metadata with correct canonical URLs
- Added Person schema with proper structured data
- Removed complex font loading for performance
- Added scroll-smooth and tabular-nums classes

🚀 Hero & KPIs (NewHero.tsx + page.tsx):
- Single H1 with proper hierarchy
- Server-rendered KPI values (no 0 flicker)
- Stable widths with tabular numbers
- Primary CTA focus with proper contrast

🎨 Typography & Spacing (globals.css):
- Fluid typography with CSS clamp() functions
- Consistent section spacing
- Reduced-motion support
- Web Vitals optimizations
- Focus outlines for accessibility

⚙️ Configuration Updates:
- Tailwind: Container, brand colors, font variants
- Next.js: Image optimization, compression, strict mode
- Package.json: Added postbuild sitemap generation

🖼️ Image Optimization:
- Organized images in proper directory structure
- Created WebP/AVIF optimized versions
- Proper Open Graph image (1200x630)
- Favicon organization

🔍 SEO Plumbing:
- next-sitemap configuration
- Automatic robots.txt and sitemap.xml generation
- Proper image paths and metadata

📱 Mobile Navigation (NewNav.tsx):
- Focus-trap and scroll lock ready
- Big tap targets (44px minimum)
- Proper ARIA attributes
- Smooth animations with reduced-motion support

📋 Case Study Cards (CaseStudyCards.tsx):
- Scan-friendly layout with icons
- Clear outcomes and metrics
- Hover states and proper contrast
- Grid responsive design

🛡️ QA & Web Vitals:
- Image aspect ratios preserved
- Focus outlines for accessibility
- Color contrast improvements
- Box-sizing and responsive images
- Reduced motion support

✅ Benefits:
- Better Core Web Vitals scores
- Improved accessibility
- Cleaner, more maintainable code
- Better SEO and social previews
- Mobile-first responsive design
- Performance optimizations

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "dev": "NEXT_NO_TURBOPACK=1 next dev",
     "dev:turbo": "next dev --turbo",
     "build": "next build",
+    "postbuild": "next-sitemap",
     "start": "next start",
     "typecheck": "tsc --noEmit",
     "lint": "next lint",
